# 2025ESPprojectPatternTable

./: .gitignore  CMakeLists.txt  gitignore
.cache/clangd/index/: patternTable.c.86313C52D2B36B33.idx
data/: 200data.txt  200time.txt  8data.txt  data.txt  h200data.txt  h8data.txt  hdata.txt  times.txt
main/: CMakeLists.txt  main.c  main1.c  patternTable.c
main/inc/: app_config.h  frame_buffer_player.h  lightdance_reader.h  pattern_table.h  player.h  sdcard.h  state_changer.h  testing.h  timer_array.h  timer_fps.h
main/src/: frame_buffer_player.c  lightdance_reader.c  pattern_table.c  player.c  sdcard.c  state_changer.c  testing.c  timer.c  timer_array.c  timer_fps.c
