idf_component_register(SRCS "main.c"
                            "src/timer_fps.c"
                            "src/timer_array.c"
                            "src/lightdance_reader.c"
                        #     "src/frame_buffer_player.c"
                            ""
                    INCLUDE_DIRS "inc")
