idf_component_register(SRCS "main.c"
                          
                            "src/player.c"
                            "src/lightdance_reader.c"
                            "src/sdcard.c"
                            "src/state_changer.c"
                            ""
                    INCLUDE_DIRS "inc")
