idf_component_register(SRCS "main.c"
                          
                            "src/player.c"
                            "src/pattern_table.c"
                            "src/sdcard.c"
                            "src/state_changer.c"
                            ""
                    INCLUDE_DIRS "inc")
